--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.15.2",
+    "plotly": "^1.0.6",
     "socket.io": "^1.7.3",
     "sqlite3": "^3.1.8"
   }
